# hypermodern_python_example

./: .flake8  README.md  noxfile.py  pyproject.toml
src/hypermodern_python_example/: __init__.py  console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
