[tool.poetry]
name = "hypermodern_python_example"
version = "0.1.0"
description = "Example package following along with the a Hypermodern Python Example. Showcasing modern development habits and tools to facilitate agile Python Development."
authors = ["Ryan Skinner <rskinner593@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rcskinner/hypermodern_python_example"
repository = "https://github.com/rcskinner/hypermodern_python_example"
keywords = ["hypermodern","DevOps"]
[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python_example.console:main"

#Configuration options for the test coverage
[tool.coverage.paths]
source = ["src","*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python_example"]

[tool.coverage.report]
show_missing = true
fail_under = 80
